[gd_scene load_steps=2 format=3 uid="uid://c1rrkx0ecw2d5"]

[ext_resource type="Script" path="res://src/scenes/atelierDouble.gd" id="1_fxky8"]

[node name="AtelierDouble" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fxky8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadIDX" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Extract .IDX/.IMG"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 40.0
offset_right = 272.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -4

[node name="Extract Zlib" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Extract Compressed Zlib Files"

[node name="FILELoadIDX" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.IDX")
use_native_dialog = true

[node name="FILELoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadIDX" to="." method="_on_load_idx_pressed"]
[connection signal="toggled" from="VBoxContainer/Extract Zlib" to="." method="_on_extract_zlib_toggled"]
[connection signal="file_selected" from="FILELoadIDX" to="." method="_on_file_load_idx_file_selected"]
[connection signal="dir_selected" from="FILELoadFOLDER" to="." method="_on_file_load_folder_dir_selected"]
